--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <ul>
     <li><strong>Email:</strong> <a href="mailto:rahilanath@gmail.com">rahilanath@gmail.com</a></li>
     <li><strong>Github:</strong> <a href="https://github.com/rahilanath">https://github.com/rahilanath</a></li>
+    <li><strong>SQL:</strong> <a href="https://rahilanath.github.io/sql-challenge/">https://rahilanath.github.io/sql-challenge/</a></li>
   </ul>
 </body>
 
